# geant4-droplet

./: .gitignore  CMakeLists.txt  README.md  sim.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  GeometryParameters.hh  PhysicsList.hh  PrimaryGenerator.hh  RunAction.hh  SensitiveDetector.hh  StackingAction.hh  SteppingAction.hh
macros/: run.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  GeometryParameters.cc  PhysicsList.cc  PrimaryGenerator.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc
